# simple-vec3

./: .travis.yml  CHANGELOG.md  README.md  package.yaml  simple-vec3.cabal  stack-previous.yaml  stack.yaml
benchmark/: Benchmark.hs
src/Data/: Vec3.hs
src/Data/Vec3/: Class.hs  Storable.hs  TUnboxed.hs  Tupled.hs  Unboxed.hs
src/Data/Vec3/Unboxed/: Contiguous.hs  Tupled.hs
tests/: Main.hs  Tests.hs
