name:                simple-vec3
version:             0.1.0.0
synopsis:            Three-dimensional vectors of doubles with basic operations
homepage:            http://github.com/dzhus/simple-vec3
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          <dima@dzhus.org>
category:            Math, Numerical
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src

  ghc-options: -Wall -O2 -fllvm

  exposed-modules:
    Data.Vec3
    Data.Vec3.Class
    Data.Vec3.Storable
    Data.Vec3.TUnboxed
    Data.Vec3.Unboxed

  build-depends:
    base        == 4.6.*,
    vector      == 0.10.*

executable vec3-benchmark
   main-is: benchmark/Benchmark.hs

   ghc-options: -Wall -O2 -fllvm -rtsopts

   build-depends:
     base       == 4.6.*,
     criterion  == 0.6.*,
     simple-vec3,
     vector     == 0.10.*
