name:                simple-vec3
version:             0.3

synopsis:            Three-dimensional vectors of doubles with basic operations

description:         A class of 3-vectors with a set of basic methods
                     for geometry operations on vectors and an
                     associated matrix type. Instances are provided
                     for use with "Data.Vector.Unboxed" and
                     "Data.Vector.Storable" as container types.

homepage:            http://github.com/dzhus/simple-vec3/
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          <dima@dzhus.org>
category:            Math, Numerical

build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.10.1

source-repository head
  type:     git
  location: http://github.com/dzhus/simple-vec3/

library
  hs-source-dirs: src

  ghc-options: -Wall -O2 -fllvm

  exposed-modules:
    Data.Vec3
    Data.Vec3.Class

  other-modules:
    Data.Vec3.Unboxed

  build-depends:
    base             >= 4.6 && < 4.9,
    vector           == 0.10.*,
    vector-th-unbox  == 0.2.*

benchmark simple-vec3-benchmark
  type:    exitcode-stdio-1.0
  main-is: benchmark/Benchmark.hs

  ghc-options: -Wall -O2 -fllvm -rtsopts

  build-depends:
    base             >= 4.6 && < 4.9,
    criterion        == 1.1.*,
    simple-vec3,
    vector           == 0.10.*,
    vector-th-unbox  == 0.2.*
