name:                simple-vec3
version:             0.3

synopsis:            Three-dimensional vectors of doubles with basic operations

description:         A class of 3-vectors with a set of basic methods
                     for geometry operations on vectors and an
                     associated matrix type. Instances are provided
                     for use with "Data.Vector.Unboxed" and
                     "Data.Vector.Storable" as container types.

homepage:            http://github.com/dzhus/simple-vec3/
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          <dima@dzhus.org>
category:            Math, Numerical

build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.10.1

source-repository head
  type:     git
  location: http://github.com/dzhus/simple-vec3/

library
  hs-source-dirs: src

  ghc-options: -Wall

  exposed-modules:
    Data.Vec3
    Data.Vec3.Class

  other-modules:
    Data.Vec3.Unboxed

  build-depends:
    base,
    QuickCheck,
    vector,
    vector-th-unbox

benchmark simple-vec3-benchmark
  type:    exitcode-stdio-1.0
  main-is: benchmark/Benchmark.hs

  ghc-options: -Wall

  build-depends:
    base,
    criterion,
    simple-vec3,
    vector,
    vector-th-unbox

test-suite simple-vec3-test
  type:    exitcode-stdio-1.0
  main-is: tests/Tests.hs

  ghc-options: -Wall

  build-depends:
    base,
    tasty,
    tasty-quickcheck,
    tasty-th,
    simple-vec3,
    vector,
    vector-th-unbox
